--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -31,6 +31,12 @@
                         <span>My statistics</span>
                     </a>
                 </li>
+                <li class="nav-item" id="nav-report-bug" style="display:none">
+                    <a class="nav-link" href="report-bug.html">
+                        <i class="bi bi-bug" aria-hidden="true"></i>
+                        <span>Report a Bug</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
