trad du site ajouté en EN FR et ES + changement de la font du site

--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -10,31 +10,31 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">
                         <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                        <span>Album of the Day</span>
+                        <span data-i18n="nav.albumOfDay">Album of the Day</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="game.html">
                         <i class="bi bi-controller" aria-hidden="true"></i>
-                        <span>Random album</span>
+                        <span data-i18n="nav.randomAlbum">Random album</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="ranking.html">
                         <i class="bi bi-trophy" aria-hidden="true"></i>
-                        <span>Ranking</span>
+                        <span data-i18n="nav.ranking">Ranking</span>
                     </a>
                 </li>
                 <li class="nav-item" id="nav-statistics" style="display:none">
                     <a class="nav-link" href="statistics.html">
                         <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
-                        <span>My statistics</span>
+                        <span data-i18n="nav.myStatistics">My statistics</span>
                     </a>
                 </li>
                 <li class="nav-item" id="nav-report-bug" style="display:none">
                     <a class="nav-link" href="report-bug.html">
                         <i class="bi bi-bug" aria-hidden="true"></i>
-                        <span>Report a Bug</span>
+                        <span data-i18n="nav.reportBug">Report a Bug</span>
                     </a>
                 </li>
             </ul>
@@ -54,11 +54,11 @@
             <li>
                 <button class="footer-button" id="btn-login">
                     <i class="bi bi-box-arrow-in-right"></i>
-                    Log in
+                    <span data-i18n="auth.login">Log in</span>
                  </button>
                 <button class="footer-button" id="btn-logout" style="display:none">
                     <i class="bi bi-box-arrow-right"></i>
-                    Log out
+                    <span data-i18n="auth.logout">Log out</span>
                 </button>
             </li>
         </ul>
