--- a/frontend/partials/footer.html
+++ b/frontend/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="gauche">
          <button class="footer-button" id="instructions-button">
         <i class="bi bi-question-circle"></i>
-        How to play
+        <span data-i18n="footer.howToPlay">How to play</span>
     </button>
     </div>
     <div class="centre">
@@ -11,7 +11,7 @@
     </div>
     <div class="droite">
         <div class="footer-text">
-        <p>A musical deduction game • Inspired by <a href="https://1jour1film.fr" target="_blank" id="footer-1j1f-link">1jour1film</a></p>
+        <p><span data-i18n="footer.tagline">A musical deduction game • Inspired by</span> <a href="https://1jour1film.fr" target="_blank" id="footer-1j1f-link">1jour1film</a></p>
     </div>
     </div>
   </div>   
