--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -37,6 +37,12 @@
                         <span data-i18n="nav.reportBug">Report a Bug</span>
                     </a>
                 </li>
+                <li class="nav-item" id="nav-logout" style="display:none">
+                    <button class="nav-link nav-link-logout" id="btn-logout">
+                        <i class="bi bi-box-arrow-right" aria-hidden="true"></i>
+                        <span data-i18n="auth.logout">Log out</span>
+                    </button>
+                </li>
             </ul>
         </nav>
     </div>
@@ -56,10 +62,6 @@
                     <i class="bi bi-box-arrow-in-right"></i>
                     <span data-i18n="auth.login">Log in</span>
                  </button>
-                <button class="footer-button" id="btn-logout" style="display:none">
-                    <i class="bi bi-box-arrow-right"></i>
-                    <span data-i18n="auth.logout">Log out</span>
-                </button>
             </li>
         </ul>
     </div>
