--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -14,6 +14,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="past-dailies.html">
+                        <i class="bi bi-disc" aria-hidden="true"></i>
+                        <span data-i18n="nav.archives">Archives</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="game.html">
                         <i class="bi bi-controller" aria-hidden="true"></i>
                         <span data-i18n="nav.randomAlbum">Random album</span>
