--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -26,6 +26,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="cover-guess.html">
+                        <i class="bi bi-grid-3x3-gap" aria-hidden="true"></i>
+                        <span>Cover Guess</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="ranking.html">
                         <i class="bi bi-trophy" aria-hidden="true"></i>
                         <span data-i18n="nav.ranking">Ranking</span>
