--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -28,7 +28,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="cover-guess.html">
                         <i class="bi bi-grid-3x3-gap" aria-hidden="true"></i>
-                        <span>Cover Guess</span>
+                        <span data-i18n="nav.coverGuess">Cover Guess</span>
                     </a>
                 </li>
                 <li class="nav-item">
