--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -561,6 +561,11 @@ main {
     margin-bottom: 0.25rem;
     color: black;
 }
+.search-result-year {
+    font-size: 0.75rem;
+    color: rgba(0, 0, 0, 0.6);
+    margin-bottom: 0.25rem;
+}
 .search-result-thumb {
     width: 80px;
     height: 80px;
