--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -37,23 +37,11 @@
                         <span data-i18n="nav.ranking">Ranking</span>
                     </a>
                 </li>
-                <li class="nav-item" id="nav-statistics" style="display:none">
-                    <a class="nav-link" href="statistics.html">
-                        <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
-                        <span data-i18n="nav.myStatistics">My statistics</span>
-                    </a>
-                </li>
                 <li class="nav-item" id="nav-report-bug" style="display:none">
                     <a class="nav-link" href="report-bug.html">
                         <i class="bi bi-bug" aria-hidden="true"></i>
                         <span data-i18n="nav.reportBug">Report a Bug</span>
                     </a>
-                </li>
-                <li class="nav-item" id="nav-logout" style="display:none">
-                    <button class="nav-link nav-link-logout" id="btn-logout">
-                        <i class="bi bi-box-arrow-right" aria-hidden="true"></i>
-                        <span data-i18n="auth.logout">Log out</span>
-                    </button>
                 </li>
             </ul>
         </nav>
@@ -62,12 +50,32 @@
     </div>
     <div class="droite">
         <ul class="nav-list">
-             <li class="user-profile" id="user-profile" style="display:none">
-            <a href="profile.html" class="avatar-link" title="View Profile">
-                <img id="user-avatar" class="avatar" alt="Avatar" crossorigin="anonymous"/>
-                
-            </a>
-            <span id="user-name" class="user-name"></span>
+            <li class="user-profile-menu" id="user-profile-menu" style="display:none">
+                <button class="user-profile-toggle" id="user-profile-toggle" aria-expanded="false" aria-controls="user-profile-dropdown">
+                    <img id="user-avatar" class="avatar" alt="Avatar" crossorigin="anonymous"/>
+                    <span id="user-name" class="user-name"></span>
+                    <i class="bi bi-chevron-down"></i>
+                </button>
+                <ul id="user-profile-dropdown" class="user-profile-dropdown">
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">
+                            <i class="bi bi-person" aria-hidden="true"></i>
+                            <span data-i18n="nav.profile">Profile</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" id="nav-statistics-dropdown" style="display:none">
+                        <a class="nav-link" href="statistics.html">
+                            <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
+                            <span data-i18n="nav.myStatistics">My statistics</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-link nav-link-logout" id="btn-logout">
+                            <i class="bi bi-box-arrow-right" aria-hidden="true"></i>
+                            <span data-i18n="auth.logout">Log out</span>
+                        </button>
+                    </li>
+                </ul>
             </li>
             <li>
                 <button class="footer-button" id="btn-login">
