--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -21,7 +21,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="game.html">
-                        <i class="bi bi-controller" aria-hidden="true"></i>
+                        <i class="bi bi-shuffle" aria-hidden="true"></i>
                         <span data-i18n="nav.randomAlbum">Random album</span>
                     </a>
                 </li>
@@ -86,7 +86,7 @@
         </ul>
     </div>
   </div>
-  <div class="logo">
-        <img src="../img/logo.png" style="width:300px">
-    </div>
+  <a href="index.html" class="logo">
+        <img src="../img/logo.png" style="width:300px" alt="AlbumGuessr">
+    </a>
 </header>
